--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.14.0",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
